<resources>
    <string name="app_name">PRAC. EXAM NO. 2</string>
    <string name="gender">Gender:</string>
    <string name="fullname">Fullname:</string>
    <string name="age">Age:</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
</resources>
